Appended food and calorie on page

--- a/calorie-client/index.html
+++ b/calorie-client/index.html
@@ -20,7 +20,7 @@
 
             <div class="form-group">
               <label for="formGroupExampleInput2">Date</label>
-              <input type="text" class="form-control" id="date" placeholder="Date">
+              <input type="date" class="form-control" id="date" placeholder="Date">
             </div>
 
             <div class="row">
@@ -41,6 +41,9 @@
             <button id="submitButton" type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div> <!-- col-md-6 -->
+        <div class="col-md-6">
+          <ul id="showResults"></ul>
+        </div>
       </div>
 
     </div>
