edit table userfoods

--- a/calorie-client/index.html
+++ b/calorie-client/index.html
@@ -15,7 +15,7 @@
           <form>
             <div class="form-group">
               <label for="formGroupExampleInput">User Name</label>
-              <input type="text" class="form-control" id="user_name" placeholder="Name">
+              <input type="text" class="form-control" id="user_id" placeholder="Name">
             </div>
 
             <div class="form-group">
@@ -27,7 +27,7 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label for="formGroupExampleInput2">Food Item</label>
-                  <input type="text" class="form-control" id="food_item" placeholder="Food Item">
+                  <input type="text" class="form-control" id="food_id" placeholder="Food Item">
                 </div>
               </div>
               <div class="col-md-6">
