a semi-working counter

--- a/calorie-client/chart.html
+++ b/calorie-client/chart.html
@@ -17,5 +17,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="js/calorie-chart.js"></script>
+    <!-- <script src="js/index.js"></script> -->
   </body>
 </html>
