--- a/calorie-client/index.html
+++ b/calorie-client/index.html
@@ -59,6 +59,7 @@
         </div> <!-- col-md-6 -->
         <div class="col-md-6">
           <h3 id="todayDate"></h3>
+          <h5 id="totalCalories">Total Calorie Intake: </h5>
           <ul id="showResults"></ul>
         </div>
       </div>
@@ -68,7 +69,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script src="js/calorie-chart.js"></script>
+    <!-- <script src="js/calorie-chart.js"></script> -->
     <script src="js/index.js"></script>
   </body>
 </html>
