--- a/calorie-client/index.html
+++ b/calorie-client/index.html
@@ -7,8 +7,11 @@
   </head>
   <body>
     <div class="container">
-      <nav>
-        <a href="chart.html">chart</a>
+      <nav class="navbar navbar-default">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">Home</a>
+          <a href="chart.html">chart</a>
+        </div>
       </nav>
       <h1>Hello World</h1>
 
@@ -21,6 +24,7 @@
                 <option value=1>Anna</option>
                 <option value=2>Daniel</option>
                 <option value=3>Sylvee</option>
+                <option value=4>Tina</option>
               </select>
             </div>
 
@@ -40,9 +44,10 @@
                 <div class="form-group">
                   <label for="user_name_input">Food Item</label><br>
                   <select id="food-input">
-                    <option value=1>Pasta</option>
-                    <option value=2>Pancake</option>
-                    <option value=3>Juice</option>
+                    <option value=1>Pizza</option>
+                    <option value=2>BiBimBap</option>
+                    <option value=3>Ice cream</option>
+                    <option value=4>Tuna Sandwich</option>
                   </select>
                 </div>
               </div>
