--- a/calorie-client/chart.html
+++ b/calorie-client/chart.html
@@ -11,6 +11,7 @@
     <h1>Welcome to Charts!</h1>
     <div style="width: 600px;">
       <canvas id="lineChart" height="400" width="400"></canvas>
+      <canvas id="lineChart2" height="400" width="800"></canvas>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
