render today's food of current user on index page

--- a/calorie-client/index.html
+++ b/calorie-client/index.html
@@ -44,8 +44,8 @@
                 <div class="form-group">
                   <label for="user_name_input">Food Item</label><br>
                   <select id="food-input">
-                    <option value=1>Pizza</option>
-                    <option value=2>BiBimBap</option>
+                    <option value=1>Pasta Carbonara</option>
+                    <option value=2>Borscht</option>
                     <option value=3>Ice cream</option>
                     <option value=4>Tuna Sandwich</option>
                   </select>
@@ -66,6 +66,8 @@
           <h3 id="todayDate"></h3>
           <h5 id="totalCalories">Total Calorie Intake: </h5>
           <ul id="showResults"></ul>
+          <h4 id="total_calories"></h4>
+
         </div>
       </div>
 
