--- a/calorie-client/index.html
+++ b/calorie-client/index.html
@@ -15,9 +15,9 @@
       </nav>
       <div id="greeting"></div>
       <div id="signInSection">
-        <div id="signInForm">
+        <div id="signInForm"></div>
 
-        </div>
+        <input id="hiddenUserId" type="hidden" value="">
 
         <div id="signUpForm">
           <h3>Or create a new User:</h3>
