--- a/calorie-client/chart.html
+++ b/calorie-client/chart.html
@@ -8,16 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <h1>Welcome to Charts!</h1>
-    <div style="width: 600px;">
-      <canvas id="lineChart" height="400" width="400"></canvas>
-      <canvas id="lineChart2" height="400" width="800"></canvas>
+    <div id="chartSection">
+      <h1>Welcome to Charts!</h1>
+      <div style="width: 600px;">
+        <canvas id="lineChart" height="400" width="400"></canvas>
+        <canvas id="lineChart2" height="400" width="800"></canvas>
+      </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="js/calorie-chart.js"></script>
-    <!-- <script src="js/index.js"></script> -->
+    <script src="js/index.js"></script>
   </body>
 </html>
